--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
+    "react-transition-group": "^1.2.1",
     "rss-parser": "^2.12.0"
   },
   "scripts": {
